Agregada la UI y se permite la validacion del token usando IdenttyServer

--- a/SocialNetwork.OAuth/Properties/launchSettings.json
+++ b/SocialNetwork.OAuth/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "SocialNetwork.OAuth": {
     "commandName": "Project",
     "launchBrowser": true,
@@ -6,6 +6,13 @@
     "environmentVariables": {
       "ASPNETCORE_ENVIRONMENT": "Development"
     }
+  },
+  "profiles": {
+    "SocialNetwork.OAuth": {
+      "commandName": "Project",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    }
   }
 }
-
